# BlueCap

./: .clang-format  .gitignore  CMakeLists.txt  README.md
resources/: app-icon.rc  app-icon.rc.in  bluecap-dark.qss  bluecap.qss  generate-icon.ps1  resources.qrc
src/: RecordMode.h  main.cpp
src/ffmpeg/: FfmpegEncoderDetector.h  FfmpegError.h  FfmpegLocator.h
src/paint/: PaintMetrics.h  PaintPrimitives.h  PaintTheme.h
src/recorder/: IRecorderService.h  RecorderController.cpp  RecorderController.h  RecordingSession.cpp  RecordingSession.h  StderrMonitor.cpp  StderrMonitor.h
src/storage/: ISettingsRepository.h  IVideoLibrary.h  QSettingsRepository.h  VideoLibrary.cpp  VideoLibrary.h
src/style/: BlueCapStyle.cpp  BlueCapStyle.h
src/theme/: Theme.h  ThemeColors.h  ThemeManager.cpp  ThemeManager.h  ThemePreference.h
src/ui/: HotkeyManager.cpp  HotkeyManager.h  IconHelper.h  MainWindow.cpp  MainWindow.h  ModeSwitch.cpp  ModeSwitch.h  NavigationController.cpp  NavigationController.h  PlaceholderPage.cpp  PlaceholderPage.h  RecordButton.cpp  RecordButton.h  RecordPage.cpp  RecordPage.h  RecordPageBottomBar.cpp  RecordPageBottomBar.h  RecordingOverlay.cpp  RecordingOverlay.h  RegionSelector.cpp  RegionSelector.h  SettingsPage.cpp  SettingsPage.h  Sidebar.cpp  Sidebar.h  TrayManager.cpp  TrayManager.h  VideoLibraryPage.cpp  VideoLibraryPage.h  WindowPicker.cpp  WindowPicker.h
src/utils/: FileUtils.h  Format.h  IconHelper.h  OutputPath.h  Theme.h  ThemeColors.h  ThumbnailGenerator.h  Win32Icon.h  WindowDragHelper.h
src/utils/win32/: DiskSpaceChecker.h  FileUtils.h  WindowEnumerator.cpp  WindowEnumerator.h
src/widgets/: ActionButton.cpp  ActionButton.h  AudioToggleCard.cpp  AudioToggleCard.h  BottomBar.cpp  BottomBar.h  BottomNavSection.cpp  BottomNavSection.h  PageHeader.cpp  PageHeader.h  PaintedCheckBox.cpp  PaintedCheckBox.h  PaintedComboBox.cpp  PaintedComboBox.h  PaintedDialog.cpp  PaintedDialog.h  PaintedLineEdit.cpp  PaintedLineEdit.h  PaintedScrollBar.cpp  PaintedScrollBar.h  PaintedSpinBox.cpp  PaintedSpinBox.h  RecentRecordingRow.cpp  RecentRecordingRow.h  RecordModeCard.cpp  RecordModeCard.h  RecordingIndicator.cpp  RecordingIndicator.h  SaveFeedbackLabel.cpp  SaveFeedbackLabel.h  SearchLineEdit.cpp  SearchLineEdit.h  SettingsPanel.cpp  SettingsPanel.h  SettingsSeparator.cpp  SettingsSeparator.h  SidebarButton.cpp  SidebarButton.h  StyledListWidget.cpp  StyledListWidget.h  (+8 more)
